i have changed the image name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="layout-width">
-            <h1>CSS is a lot of fun</h1>
+            <h1>I am in love with coding</h1>
 
         </div>
     </header>
