--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>simple website layout 3</title>
+    <title>Website Layout</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,7 +22,7 @@
         <div class="layout-width">
             <h2>Section One Title</h2>
             <div class="image-dev">
-                <img class="image-name" src="image1.jpg" alt="">
+                <img class="image-name" src="coding.jpg" alt="">
             </div>
             <p>Lorem ipsum dolor sit amet consectetur <a href="#"> adipisicing elit.</a> Quae commodi voluptas non
                 numquam tempora ut <b> temporibus consequuntur!</b></p>
