--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="layout-width">
-            <h1>I am in love with coding</h1>
+            <h1>I am a programmer</h1>
 
         </div>
     </header>
@@ -20,7 +20,7 @@
 
     <section class="section-one">
         <div class="layout-width">
-            <h2>Section One Title</h2>
+            <h2>Web Designing</h2>
             <div class="image-dev">
                 <img class="image-name" src="coding.jpg" alt="">
             </div>
